--- a/css/styles.css
+++ b/css/styles.css
@@ -70,13 +70,14 @@ body {
   padding-right: 15px;
 }
 
-/*/////////// HEADER //////////*/
+/* -----------------------------------HEADER--------------------------- */
 
 .header {
   border-bottom: 1px solid #ececec;
 }
 
 /* Logo header */
+
 .logo {
   margin-right: 93px;
 
@@ -190,7 +191,7 @@ body {
   fill: currentColor;
 }
 
-/*/////////// HERO //////////*/
+/*-------------------------------- HERO -------------------------------*/
 
 .hero {
   max-width: 1600px;
@@ -269,7 +270,7 @@ body {
   text-align: center;
 }
 
-/*/////////// FEATURES //////////*/
+/*----------------------------- FEATURES ------------------------------*/
 
 .features {
   display: flex;
@@ -322,7 +323,7 @@ body {
   line-height: 1.71;
 }
 
-/*/////////// ABOUT//////////*/
+/*--------------------------------- ABOUT-------------------------------*/
 
 .section--padding {
   padding-top: 0;
@@ -356,7 +357,7 @@ body {
   text-transform: uppercase;
   color: var(--white-color);
 }
-/*/////////// TEAM //////////*/
+/*--------------------------------- TEAM ------------------------------*/
 
 .section--bg-color {
   background-color: #f5f4fa;
@@ -439,7 +440,7 @@ body {
   fill: currentColor;
 }
 
-/*--------- Clients--------- */
+/*---------------------------- CLIENTS-------------------------------- */
 
 .clients-list {
   display: flex;
@@ -474,7 +475,7 @@ body {
   fill: currentColor;
 }
 
-/*/////////// FOOTER //////////*/
+/*---------------------------------FOOTER ------------------------------*/
 
 .footer {
   padding-top: 60px;
@@ -657,7 +658,7 @@ body {
   justify-content: center;
 }
 
-.filter .btn {
+.filter__btn {
   padding: 6px 22px;
 
   color: var(--secondary-text-color);
@@ -671,18 +672,14 @@ body {
   border: none;
   border-radius: 4px;
 
-  /* transition-property: background-color, color, box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
-
   transition: background-color var(--taming-function)
       cubic-bezier(0.4, 0, 0.2, 1),
     color var(--taming-function) cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow var(--taming-function) cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter .btn:hover,
-.filter .btn:focus {
+.filter__btn:hover,
+.filter__btn:focus {
   color: var(--white-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -690,7 +687,7 @@ body {
   border-radius: 4px;
 }
 
-.filter .item + .item {
+.filter__item:not(:last-child) {
   margin-left: 8px;
 }
 
@@ -703,28 +700,28 @@ body {
   background: #ffffff;
 }
 
-.projects > .item:hover,
-.projects > .item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-  cursor: pointer;
-}
-
-.projects .item {
+.projects__item {
   width: 370px;
   margin-bottom: 30px;
   margin-right: 30px;
 }
 
-.projects .item:nth-child(3n) {
+.projects__item:nth-child(3n) {
   margin-right: 0;
 }
 
-.projects .item:nth-last-child(-n + 3) {
+.projects__item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
-.projects-link {
+.projects__item:hover,
+.projects__item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+}
+
+.projects__link {
   text-decoration: none;
   font-family: Roboto;
   font-style: normal;
@@ -734,12 +731,12 @@ body {
   color: #757575;
 }
 
-.product-thumb {
+.projects-desc {
   position: relative;
   overflow: hidden;
 }
 
-.thumb-text {
+.projects-desc__text {
   position: absolute;
   top: 0;
   transform: translateY(100%);
@@ -758,19 +755,19 @@ body {
     box-shadow var(--taming-function) cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-link:hover .thumb-text,
-.projects-link:focus .thumb-text {
+.projects__link:hover .projects-desc__text,
+.projects__link:focus .projects-desc__text {
   transform: translateY(0);
 }
 
-.projects-card {
+.projects-meta {
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
 }
 
-.projects .title {
+.projects-meta__title {
   margin-top: 0;
   margin-bottom: 4px;
 
@@ -780,7 +777,7 @@ body {
   letter-spacing: 0.06em;
 }
 
-.projects .text {
+.projects-meta__text {
   margin: 0;
 
   font-size: 16px;
