--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -2,17 +2,12 @@
 @import "./utils/variabless";
 @import "./components/body";
 @import "./components/header";
-@import "./components/hero";
-@import "./components/button";
+@import "./components/filter";
+@import "./components/projects";
 @import "./components/section";
-@import "./components/features";
-@import "./components/about";
-@import "./components/team";
-@import "./components/team-socials";
 @import "./components/clients";
 @import "./components/footer";
 @import "./components/address";
 @import "./components/footer-socials";
+@import "./components/button";
 @import "./components/mail-form";
-@import "./utils/visually-hidden";
-@import "./components/modal";
